# anchorpoint

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.rst  __init__.py  anchorpoint.py  changelog.md  changelog.rst  license.md  license.txt  pyproject.toml  readme.md  readme.rst  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: python_package.yml
anchorpoint/: __init__.py  schemas.py  textselectors.py  textsequences.py
anchorpoint/utils/: __init__.py  _helper.py  ranges.py
docs/: api.rst  conf.py  index.rst  requirements.txt  serializers.rst
docs/api/: selectors.rst  sequences.rst  serializers.rst
docs/guides/: selecting.rst
docs/history/: history.rst
tests/: conftest.py  test_ranges.py  test_schema.py  test_selectors.py  test_set.py  test_text_sequence.py
