[project]
name = "anchorpoint"
version = "0.9.0"
description = "text substring selectors for anchoring annotations"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.0",
    "python-ranges>=1.2.2",
    "sympy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
